--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,24 +1,41 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;
+    margin: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #fafafa;
+    color: #212121;
+    line-height: 1.5;
 }
 
 input {
-  padding: 8px;
-  font: inherit;
+    padding: 8px;
+    font: inherit;
 }
 
 button {
-  padding: 8px 12px;
-  cursor: pointer;
+    padding: 8px 12px;
+    cursor: pointer;
+}
+
+img {
+    display: block;
+    width: 600px;
+    height: 400px;
+    border-radius: 30%;
+    border: 5px solid #212121;
+}
+
+.gallery {
+  list-style: none; 
+  display: flex;
+  justify-content: center;
+}
+.gallery > li:not(:last-child) {
+  margin-right: 15px;
 }
